--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
 <main class="container">
     <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
         <div class="col-lg-6 px-0">
-            <h1 class="display-4 fst-italic">Title of a longer featured blog post</h1>
-            <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
-            <p class="lead mb-0"><a href="#" class="text-body-emphasis fw-bold">Continue reading...</a></p>
+            <h1 class="display-4 fst-italic">서동준</h1>
+            <p class="lead my-3">대충 노력하지 않는 뭐시기</p>
+            <p class="lead mb-0"><a href="#" class="text-body-emphasis fw-bold">계속 검색해보기...</a></p>
         </div>
     </div>
 
@@ -228,12 +228,12 @@
         <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
-                    <strong class="d-inline-block mb-2 text-primary-emphasis">World</strong>
-                    <h3 class="mb-0">Featured post</h3>
+                    <strong class="d-inline-block mb-2 text-primary-emphasis">포트폴리오</strong>
+                    <h3 class="mb-0">복지관 관련프로젝트</h3>
                     <div class="mb-1 text-body-secondary">Nov 12</div>
-                    <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text mb-auto">복지관과 관련된 프로젝트 어쩌구 저쩌구 입니다.</p>
                     <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-                        Continue reading
+                        GIT홈페이지로 이동하기
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
                 </div>
@@ -245,12 +245,46 @@
         <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
-                    <strong class="d-inline-block mb-2 text-success-emphasis">Design</strong>
-                    <h3 class="mb-0">Post title</h3>
+                    <strong class="d-inline-block mb-2 text-success-emphasis">포트폴리오</strong>
+                    <h3 class="mb-0">여행 관련 프로젝트</h3>
                     <div class="mb-1 text-body-secondary">Nov 11</div>
-                    <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    <p class="mb-auto">여행지와 관련된 프로젝트 어쩌구 저쩌구</p>
                     <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-                        Continue reading
+                        GIT 홈페이지로 이동
+                        <svg class="bi"><use xlink:href="#chevron-right"/></svg>
+                    </a>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                    <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <strong class="d-inline-block mb-2 text-success-emphasis">포트폴리오</strong>
+                    <h3 class="mb-0">요리 레시피 프로젝트</h3>
+                    <div class="mb-1 text-body-secondary">Nov 11</div>
+                    <p class="mb-auto">요리와 관련된 어쩌구 저쩌구</p>
+                    <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+                        GIT 홈페이지로 이동
+                        <svg class="bi"><use xlink:href="#chevron-right"/></svg>
+                    </a>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                    <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <strong class="d-inline-block mb-2 text-success-emphasis">포트폴리오</strong>
+                    <h3 class="mb-0">금융 관련 프로젝트</h3>
+                    <div class="mb-1 text-body-secondary">Nov 11</div>
+                    <p class="mb-auto">금융에 관련된 프로젝트 어쩌구 저쩌구</p>
+                    <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+                        GIT 홈페이지로 이동
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
                 </div>
@@ -264,7 +298,7 @@
     <div class="row g-5">
         <div class="col-md-8">
             <h3 class="pb-4 mb-4 fst-italic border-bottom">
-                From the Firehose
+                자기 소개서
             </h3>
 
             <article class="blog-post">
@@ -396,63 +430,30 @@
                     <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
                 </div>
 
-                <div>
-                    <h4 class="fst-italic">Recent posts</h4>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
-                                <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-                                <div class="col-lg-8">
-                                    <h6 class="mb-0">Example blog post title</h6>
-                                    <small class="text-body-secondary">January 15, 2024</small>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
-                                <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-                                <div class="col-lg-8">
-                                    <h6 class="mb-0">This is another blog post title</h6>
-                                    <small class="text-body-secondary">January 14, 2024</small>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
-                                <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-                                <div class="col-lg-8">
-                                    <h6 class="mb-0">Longer blog post title: This one has multiple lines!</h6>
-                                    <small class="text-body-secondary">January 13, 2024</small>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-
                 <div class="p-4">
-                    <h4 class="fst-italic">Archives</h4>
+                    <h4 class="fst-italic">보유 기술</h4>
                     <ol class="list-unstyled mb-0">
-                        <li><a href="#">March 2021</a></li>
-                        <li><a href="#">February 2021</a></li>
-                        <li><a href="#">January 2021</a></li>
-                        <li><a href="#">December 2020</a></li>
-                        <li><a href="#">November 2020</a></li>
-                        <li><a href="#">October 2020</a></li>
-                        <li><a href="#">September 2020</a></li>
-                        <li><a href="#">August 2020</a></li>
-                        <li><a href="#">July 2020</a></li>
-                        <li><a href="#">June 2020</a></li>
-                        <li><a href="#">May 2020</a></li>
-                        <li><a href="#">April 2020</a></li>
+                        <li><a href="#">JAVA</a></li>
+                        <li><a href="#">PYTHON</a></li>
+                        <li><a href="#">CSS</a></li>
+                        <li><a href="#">HTML</a></li>
+                        <li><a href="#">JAVASCRIPT</a></li>
+                        <li><a href="#">JSP</a></li>
+                        <li><a href="#">SPRING</a></li>
+                        <li><a href="#">DATABASE</a></li>
+                        <li><a href="#">PANDAS</a></li>
+                        <li><a href="#">MAPLOTE</a></li>
+                        <li><a href="#">크롤링</a></li>
+                        <li><a href="#">데이터분석</a></li>
                     </ol>
                 </div>
 
                 <div class="p-4">
-                    <h4 class="fst-italic">Elsewhere</h4>
+                    <h4 class="fst-italic">자격증</h4>
                     <ol class="list-unstyled">
-                        <li><a href="#">GitHub</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">기사자격증</a></li>
+                        <li><a href="#">데이터베이스뭐시기</a></li>
+                        <li><a href="#">운전면허뭐시기</a></li>
                     </ol>
                 </div>
             </div>
@@ -462,7 +463,7 @@
 </main>
 
 <footer class="py-5 text-center text-body-secondary bg-body-tertiary">
-    <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+    <p>서동준의 블로그임 <a href="https://getbootstrap.com/">메일주소</a> by <a href="https://twitter.com/mdo">superdongte@naver.com</a>.</p>
     <p class="mb-0">
         <a href="#">Back to top</a>
     </p>
