--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
         <div class="col-lg-6 px-0">
             <h1 class="display-4 fst-italic">서동준</h1>
-            <p class="lead my-3">대충 노력하지 않는 뭐시기</p>
+            <p class="lead my-3">이론보다는 실천 팀과 함께하는 성실한 지원자</p>
             <p class="lead mb-0"><a href="#" class="text-body-emphasis fw-bold">계속 검색해보기...</a></p>
         </div>
     </div>
@@ -230,32 +230,38 @@
                 <div class="col p-4 d-flex flex-column position-static">
                     <strong class="d-inline-block mb-2 text-primary-emphasis">포트폴리오</strong>
                     <h3 class="mb-0">복지관 관련프로젝트</h3>
-                    <div class="mb-1 text-body-secondary">Nov 12</div>
-                    <p class="card-text mb-auto">복지관과 관련된 프로젝트 어쩌구 저쩌구 입니다.</p>
+                    <div class="mb-1 text-body-secondary">Web사이트</div>
+                    <p class="card-text mb-auto">복지관 소개 사이트 입니다.</p>
                     <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
                         GIT홈페이지로 이동하기
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+                        <image href="welfare.jpeg" width="400" height="250"></image>
+
+                        <text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
                 </div>
             </div>
         </div>
         <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
-                    <strong class="d-inline-block mb-2 text-success-emphasis">포트폴리오</strong>
+                    <strong class="d-inline-block mb-2 text-primary-emphasis">포트폴리오</strong>
                     <h3 class="mb-0">여행 관련 프로젝트</h3>
-                    <div class="mb-1 text-body-secondary">Nov 11</div>
-                    <p class="mb-auto">여행지와 관련된 프로젝트 어쩌구 저쩌구</p>
+                    <div class="mb-1 text-body-secondary">Web사이트</div>
+                    <p class="mb-auto">여행지와 관련된 프로젝트입니다.</p>
                     <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
                         GIT 홈페이지로 이동
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <svg class="bd-placeholder-img" width="250" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+                        <image href="yellow_bellon.jpeg" width="300" height="250"></image>
+
+                        <text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
                 </div>
             </div>
         </div>
@@ -264,15 +270,18 @@
                 <div class="col p-4 d-flex flex-column position-static">
                     <strong class="d-inline-block mb-2 text-success-emphasis">포트폴리오</strong>
                     <h3 class="mb-0">요리 레시피 프로젝트</h3>
-                    <div class="mb-1 text-body-secondary">Nov 11</div>
-                    <p class="mb-auto">요리와 관련된 어쩌구 저쩌구</p>
+                    <div class="mb-1 text-body-secondary">App</div>
+                    <p class="mb-auto">요리 레시피 등록이 가능한 블로그형 앱입니다.</p>
                     <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
                         GIT 홈페이지로 이동
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+                        <image href="recipe.jpeg" width="200" height="250"></image>
+
+                        <text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
                 </div>
             </div>
         </div>
@@ -281,15 +290,18 @@
                 <div class="col p-4 d-flex flex-column position-static">
                     <strong class="d-inline-block mb-2 text-success-emphasis">포트폴리오</strong>
                     <h3 class="mb-0">금융 관련 프로젝트</h3>
-                    <div class="mb-1 text-body-secondary">Nov 11</div>
-                    <p class="mb-auto">금융에 관련된 프로젝트 어쩌구 저쩌구</p>
+                    <div class="mb-1 text-body-secondary">App</div>
+                    <p class="mb-auto">금융에 관련된 데이터를 분석하고 추천해주는 앱 입니다.</p>
                     <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
                         GIT 홈페이지로 이동
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+                        <image href="fund.jpeg" width="200" height="250"></image>
+
+                        <text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
                 </div>
             </div>
         </div>
@@ -297,129 +309,33 @@
 
     <div class="row g-5">
         <div class="col-md-8">
-            <h3 class="pb-4 mb-4 fst-italic border-bottom">
-                자기 소개서
-            </h3>
-
             <article class="blog-post">
-                <h2 class="display-5 link-body-emphasis mb-1">Sample blog post</h2>
-                <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
+                <h2 class="display-5 link-body-emphasis mb-1">자기 소개서</h2>
+<!--                <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>-->
 
-                <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
-                <hr>
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                <h2>Blockquotes</h2>
-                <p>This is an example blockquote in action:</p>
-                <blockquote class="blockquote">
-                    <p>Quoted text goes here.</p>
-                </blockquote>
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                <h3>Example lists</h3>
-                <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout. This is an example unordered list:</p>
-                <ul>
-                    <li>First list item</li>
-                    <li>Second list item with a longer description</li>
-                    <li>Third list item to close it out</li>
-                </ul>
-                <p>And this is an ordered list:</p>
-                <ol>
-                    <li>First list item</li>
-                    <li>Second list item with a longer description</li>
-                    <li>Third list item to close it out</li>
-                </ol>
-                <p>And this is a definition list:</p>
-                <dl>
-                    <dt>HyperText Markup Language (HTML)</dt>
-                    <dd>The language used to describe and define the content of a Web page</dd>
-                    <dt>Cascading Style Sheets (CSS)</dt>
-                    <dd>Used to describe the appearance of Web content</dd>
-                    <dt>JavaScript (JS)</dt>
-                    <dd>The programming language used to build advanced Web sites and applications</dd>
-                </dl>
-                <h2>Inline HTML elements</h2>
-                <p>HTML defines a long list of available inline tags, a complete list of which can be found on the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">Mozilla Developer Network</a>.</p>
-                <ul>
-                    <li><strong>To bold text</strong>, use <code class="language-plaintext highlighter-rouge">&lt;strong&gt;</code>.</li>
-                    <li><em>To italicize text</em>, use <code class="language-plaintext highlighter-rouge">&lt;em&gt;</code>.</li>
-                    <li>Abbreviations, like <abbr title="HyperText Markup Language">HTML</abbr> should use <code class="language-plaintext highlighter-rouge">&lt;abbr&gt;</code>, with an optional <code class="language-plaintext highlighter-rouge">title</code> attribute for the full phrase.</li>
-                    <li>Citations, like <cite>— Mark Otto</cite>, should use <code class="language-plaintext highlighter-rouge">&lt;cite&gt;</code>.</li>
-                    <li><del>Deleted</del> text should use <code class="language-plaintext highlighter-rouge">&lt;del&gt;</code> and <ins>inserted</ins> text should use <code class="language-plaintext highlighter-rouge">&lt;ins&gt;</code>.</li>
-                    <li>Superscript <sup>text</sup> uses <code class="language-plaintext highlighter-rouge">&lt;sup&gt;</code> and subscript <sub>text</sub> uses <code class="language-plaintext highlighter-rouge">&lt;sub&gt;</code>.</li>
-                </ul>
-                <p>Most of these elements are styled by browsers with few modifications on our part.</p>
-                <h2>Heading</h2>
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                <h3>Sub-heading</h3>
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                <pre><code>Example code block</code></pre>
-                <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-            </article>
+                <h2>성장환경</h2>
+                <p>책으로 얻는 경험보다는 실전으로 해보는 경험</p>
+                <p>저는 옛날부터 호기심이 많은 사람입니다. 책으로 배우는 것보다는 실제로 해보는 것에 관심이 많았으며 대학교 입학 후 에는 사회 경험을 쌓기 위해 아르바이트를 하였습니다. 아르바이트하면서 매장의 관리와 동료와 일하면서 팀워크와 관리를 배웠습니다. 그리고 사회생활을 하면서 조직과 단체 생활을 할 때 팀원들과 어떻게 하면 원만한 관계 맺을 수 있을까 생각해 보았습니다. 그 생각의 결과는 도움이었습니다. 팀원들의 상황을 생각해 일단 저의 임무를 끝낸 후에 팀원들을 도와주었습니다. 그 결과 다 같이 퇴근 함으로써 더욱더 팀워크가 향상되었습니다. 앞으로도 일을 함에 있어서 저의 일이 끝나더라도 다른 분들을 도와주어 더욱더 팀에 도움이 되고 싶습니다.</p>
 
-            <article class="blog-post">
-                <h2 class="display-5 link-body-emphasis mb-1">Another blog post</h2>
-                <p class="blog-post-meta">December 23, 2020 by <a href="#">Jacob</a></p>
+                <h2>성격의 장/단점</h2>
+                <p>맡은 일에는 최선을 다하는 꾸준한 성실함</p>
+                <p>저의 장점은 저는 무슨 일을 하더라도 오래 하며 성실합니다. 아르바이트 동안 무단으로 결석한 적이 없으며 또한 팀 공동체 생활에 잘 적응한다는 점입니다. 군대에서도 후임들과 적극적인 소통을 하였으며 무슨 일이 있으면 '내가 먼저 하자.'라는 생각으로 솔선수범한 자세로 임했습니다. 그로 인해 군대에서 ‘올해의 선진 병영 생활관’으로 뽑혀 생활관 전원이 포상 휴가를 받았습니다.
+                    그러나 저의 단점은 제 의견을 양보해서 공동체의 의견을 많이 따르는 것이 단점입니다. 이에 따라 타인의 의견만 생각해서 방향과 맞지 않는 길로 갈 수 있는 상황을 막지 못하는 문제 생겼었습니다. 이를 보완하기 위해서 가고자 하는 뱡향 에서 벗어 나는 상황에 대해서는 적극적으로 제 생각을 피력하고 있습니다.</p>
 
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                <blockquote>
-                    <p>Longer quote goes here, maybe with some <strong>emphasized text</strong> in the middle of it.</p>
-                </blockquote>
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                <h3>Example table</h3>
-                <p>And don't forget about tables in these posts:</p>
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Upvotes</th>
-                        <th>Downvotes</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>Alice</td>
-                        <td>10</td>
-                        <td>11</td>
-                    </tr>
-                    <tr>
-                        <td>Bob</td>
-                        <td>4</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>Charlie</td>
-                        <td>7</td>
-                        <td>9</td>
-                    </tr>
-                    </tbody>
-                    <tfoot>
-                    <tr>
-                        <td>Totals</td>
-                        <td>21</td>
-                        <td>23</td>
-                    </tr>
-                    </tfoot>
-                </table>
+                <h2>지원동기</h2>
+                <p>전공과 WEB 사이트의 결합</p>
+                <p>처음엔 사회복지를 전공하였습니다. 그러나 졸업을 한 후 아르바이트할 때 한 매장 관리 프로그램에 관심이 더 커졌으며 나도 이런 프로그램을 만들어서 배포하고 싶다는 생각이 점점 더 커지게 되었습니다. 그리고 프로그래밍 함수를 보면서 어떻게 해서 작동을 할 수 있는지 큰 호기심을 가지게 되었습니다.
+                    그래서 저는 사회복지 전공을 바꾸고 IT 관련 업계에 종사하고 싶었습니다. 그래서 관련 학원에 수업을 들었고 이 과정을 통해서 JAVA기 반의 WEB에 대한 흥미를 가졌으며 제가 했던 프로젝트와 유명한 웹사이트를 클론 코딩하면서 연구하였습니다.
+                    지금 현대 시대에는 특히 사회 복지에 대한 서비스가 점점 늘고 있습니다. 그로 인해서 고객들이 복지 관련 상품을 많이 요구할 것입니다. 이것을 통하여 개발과 저의 복지 전공을 통합하는 서비스를 개발하고 싶습니다.</p>
 
-                <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-            </article>
+                <h2>입사후포부</h2>
+                <p>빠른 적응을 통해서 팀에 필요한 사람과 안전장치가 되겠습니다.</p>
+                <p>입사 후에는 그동안 프로그래밍의 지식을 이용하여. 업무에 관한 구조와 회사 프로세스를 빠르게 습득하겠습니다.
+                    첫째 팀원들과 함께 만일에 뒤처지는 팀원이 있다면 뒤에 가더라도 제가 할 일을 먼저 끝내고 그 팀원과 함께 갈 것이며 팀 프로젝트를 성실히 마칩니다.
+                    둘째는 업무는 빠르게 적응하겠습니다. 제가 훈련 기간 동안 배운 기술과 빠른 적응력으로 팀 작업을 할 시에 차질이 없도록 할 것이며 부족한 지식은 메모를 통해서 적으며 자기 계발을 하겠습니다.
+                    셋째 항상 겸손하겠습니다. 제가 좋아하는 겪어가 있습니다 '벼는 익을수록 고개를 숙인다' 그 뜻에 맞게 지위가 올라가도 항상 초심으로 돌아가 겸손한 자세로 실무에 임하겠습니다.
+                    넷째 “리팩토링” 하겠습니다. 프로그램이 리팩토링이 필요하듯이 고객도 리팩토링이 필요합니다. 고객이 의뢰한 프로그램이 끝나더라도 지속적인 소통으로 사후 서비스를 통해 만족하게 하여 회사의 이미지 개선에 힘쓰겠습니다.</p>
 
-            <article class="blog-post">
-                <h2 class="display-5 link-body-emphasis mb-1">New feature</h2>
-                <p class="blog-post-meta">December 14, 2020 by <a href="#">Chris</a></p>
-
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                <ul>
-                    <li>First list item</li>
-                    <li>Second list item with a longer description</li>
-                    <li>Third list item to close it out</li>
-                </ul>
-                <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-            </article>
-
-            <nav class="blog-pagination" aria-label="Pagination">
-                <a class="btn btn-outline-primary rounded-pill" href="#">Older</a>
-                <a class="btn btn-outline-secondary rounded-pill disabled" aria-disabled="true">Newer</a>
-            </nav>
 
         </div>
 
