--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <a class="link-secondary" href="#">Subscribe</a>
             </div>
             <div class="col-4 text-center">
-                <a class="blog-header-logo text-body-emphasis text-decoration-none" href="#">Large</a>
+                <a class="blog-header-logo text-body-emphasis text-decoration-none" href="#">블로그</a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
                 <a class="link-secondary" href="#" aria-label="Search">
@@ -199,18 +199,18 @@
 
     <div class="nav-scroller py-1 mb-3 border-bottom">
         <nav class="nav nav-underline justify-content-between">
-            <a class="nav-item nav-link link-body-emphasis active" href="#">World</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">U.S.</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Technology</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Design</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Culture</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Business</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Politics</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Opinion</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Science</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Health</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Style</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Travel</a>
+            <a class="nav-item nav-link link-body-emphasis active" href="#">홈화면</a>
+            <a class="nav-item nav-link link-body-emphasis" href="#">포트폴리오</a>
+            <a class="nav-item nav-link link-body-emphasis" href="#introduce">자기소개서</a>
+            <a class="nav-item nav-link link-body-emphasis" href="#technic">보유기술</a>
+            <a class="nav-item nav-link link-body-emphasis" href="#license">자격증</a>
+            <a class="nav-item nav-link link-body-emphasis" href="https://github.com/superdongte" target="_blank">Git홈페이지</a>
+<!--            <a class="nav-item nav-link link-body-emphasis" href="#">Politics</a>-->
+<!--            <a class="nav-item nav-link link-body-emphasis" href="#">Opinion</a>-->
+<!--            <a class="nav-item nav-link link-body-emphasis" href="#">Science</a>-->
+<!--            <a class="nav-item nav-link link-body-emphasis" href="#">Health</a>-->
+<!--            <a class="nav-item nav-link link-body-emphasis" href="#">Style</a>-->
+<!--            <a class="nav-item nav-link link-body-emphasis" href="#">Travel</a>-->
         </nav>
     </div>
 </div>
@@ -220,7 +220,7 @@
         <div class="col-lg-6 px-0">
             <h1 class="display-4 fst-italic">서동준</h1>
             <p class="lead my-3">이론보다는 실천 팀과 함께하는 성실한 지원자</p>
-            <p class="lead mb-0"><a href="#" class="text-body-emphasis fw-bold">계속 검색해보기...</a></p>
+            <p class="lead mb-0"><a href="#" class="text-body-emphasis fw-bold">확인</a></p>
         </div>
     </div>
 
@@ -258,7 +258,7 @@
                     </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <svg class="bd-placeholder-img" width="250" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+                    <svg class="bd-placeholder-img" width="230" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
                         <image href="yellow_bellon.jpeg" width="300" height="250"></image>
 
                         <text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
@@ -306,7 +306,7 @@
             </div>
         </div>
     </div>
-
+    <div id="introduce">
     <div class="row g-5">
         <div class="col-md-8">
             <article class="blog-post">
@@ -335,35 +335,42 @@
                     둘째는 업무는 빠르게 적응하겠습니다. 제가 훈련 기간 동안 배운 기술과 빠른 적응력으로 팀 작업을 할 시에 차질이 없도록 할 것이며 부족한 지식은 메모를 통해서 적으며 자기 계발을 하겠습니다.
                     셋째 항상 겸손하겠습니다. 제가 좋아하는 겪어가 있습니다 '벼는 익을수록 고개를 숙인다' 그 뜻에 맞게 지위가 올라가도 항상 초심으로 돌아가 겸손한 자세로 실무에 임하겠습니다.
                     넷째 “리팩토링” 하겠습니다. 프로그램이 리팩토링이 필요하듯이 고객도 리팩토링이 필요합니다. 고객이 의뢰한 프로그램이 끝나더라도 지속적인 소통으로 사후 서비스를 통해 만족하게 하여 회사의 이미지 개선에 힘쓰겠습니다.</p>
-
-
+            </article>
         </div>
 
         <div class="col-md-4">
             <div class="position-sticky" style="top: 2rem;">
                 <div class="p-4 mb-3 bg-body-tertiary rounded">
-                    <h4 class="fst-italic">About</h4>
-                    <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
-                </div>
-
-                <div class="p-4">
-                    <h4 class="fst-italic">보유 기술</h4>
+                    <h4 class="fst-italic">경험 활동</h4>
+<!--                    <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>-->
                     <ol class="list-unstyled mb-0">
-                        <li><a href="#">JAVA</a></li>
+                        <li>대경ICT산업 인재양성</li>
                         <li><a href="#">PYTHON</a></li>
                         <li><a href="#">CSS</a></li>
                         <li><a href="#">HTML</a></li>
                         <li><a href="#">JAVASCRIPT</a></li>
-                        <li><a href="#">JSP</a></li>
-                        <li><a href="#">SPRING</a></li>
-                        <li><a href="#">DATABASE</a></li>
-                        <li><a href="#">PANDAS</a></li>
-                        <li><a href="#">MAPLOTE</a></li>
-                        <li><a href="#">크롤링</a></li>
-                        <li><a href="#">데이터분석</a></li>
                     </ol>
                 </div>
-
+                <div id="technic">
+                <div class="p-4">
+                    <h4 class="fst-italic">보유 기술</h4>
+                    <ol class="list-unstyled mb-0">
+                        <li>JAVA</li>
+                        <li>PYTHON</li>
+                        <li>CSS</li>
+                        <li>HTML</li>
+                        <li>JAVASCRIPT</li>
+                        <li>JSP</li>
+                        <li>SPRING</li>
+                        <li>DATABASE</li>
+                        <li>PANDAS</li>
+                        <li>MAPLOTE</li>
+                        <li>크롤링</li>
+                        <li>데이터분석</li>
+                    </ol>
+                </div>
+                </div>
+                <div id="license">
                 <div class="p-4">
                     <h4 class="fst-italic">자격증</h4>
                     <ol class="list-unstyled">
@@ -371,6 +378,7 @@
                         <li><a href="#">데이터베이스뭐시기</a></li>
                         <li><a href="#">운전면허뭐시기</a></li>
                     </ol>
+                </div>
                 </div>
             </div>
         </div>
@@ -381,7 +389,7 @@
 <footer class="py-5 text-center text-body-secondary bg-body-tertiary">
     <p>서동준의 블로그임 <a href="https://getbootstrap.com/">메일주소</a> by <a href="https://twitter.com/mdo">superdongte@naver.com</a>.</p>
     <p class="mb-0">
-        <a href="#">Back to top</a>
+        <a href="#">돌아가기</a>
     </p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
