--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                     <h3 class="mb-0">복지관 관련프로젝트</h3>
                     <div class="mb-1 text-body-secondary">Web사이트</div>
                     <p class="card-text mb-auto">복지관 소개 사이트 입니다.</p>
-                    <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-                        GIT홈페이지로 이동하기
+                    <a href="https://github.com/superdongte/welfare" class="icon-link gap-1 icon-link-hover stretched-link">
+                        GIT홈페이지로 이동
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
                 </div>
@@ -252,7 +252,7 @@
                     <h3 class="mb-0">여행 관련 프로젝트</h3>
                     <div class="mb-1 text-body-secondary">Web사이트</div>
                     <p class="mb-auto">여행지와 관련된 프로젝트입니다.</p>
-                    <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+                    <a href="https://github.com/lemonjiyeon/teamproject" class="icon-link gap-1 icon-link-hover stretched-link">
                         GIT 홈페이지로 이동
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
@@ -272,8 +272,12 @@
                     <h3 class="mb-0">요리 레시피 프로젝트</h3>
                     <div class="mb-1 text-body-secondary">App</div>
                     <p class="mb-auto">요리 레시피 등록이 가능한 블로그형 앱입니다.</p>
-                    <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-                        GIT 홈페이지로 이동
+                    <a href="https://github.com/superdongte/CookProject" class="icon-link gap-1 icon-link-hover stretched-link">
+                        GIT 홈페이지로 이동(앱)
+                        <svg class="bi"><use xlink:href="#chevron-right"/></svg>
+                    </a>
+                    <a href="https://github.com/superdongte/RecipeProject" class="icon-link gap-1 icon-link-hover stretched-link">
+                        GIT 홈페이지로 이동(서버)
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
                 </div>
@@ -292,8 +296,12 @@
                     <h3 class="mb-0">금융 관련 프로젝트</h3>
                     <div class="mb-1 text-body-secondary">App</div>
                     <p class="mb-auto">금융에 관련된 데이터를 분석하고 추천해주는 앱 입니다.</p>
-                    <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-                        GIT 홈페이지로 이동
+                    <a href="https://github.com/superdongte/TeamBank" class="icon-link gap-1 icon-link-hover stretched-link">
+                        GIT 홈페이지로 이동(앱)
+                        <svg class="bi"><use xlink:href="#chevron-right"/></svg>
+                    </a>
+                    <a href="https://github.com/superdongte/Bank" class="icon-link gap-1 icon-link-hover stretched-link">
+                        GIT 홈페이지로 이동(서버)
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
                 </div>
