--- a/index.html
+++ b/index.html
@@ -382,9 +382,9 @@
                 <div class="p-4">
                     <h4 class="fst-italic">자격증</h4>
                     <ol class="list-unstyled">
-                        <li><a href="#">기사자격증</a></li>
-                        <li><a href="#">데이터베이스뭐시기</a></li>
-                        <li><a href="#">운전면허뭐시기</a></li>
+                        <li><a href="#">정보처리기사</a></li>
+                        <li><a href="#">SQLD</a></li>
+                        <li><a href="#">운전면허1종보통</a></li>
                     </ol>
                 </div>
                 </div>
