--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
     <link rel="mask-icon" href="/docs/5.3/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
     <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon.ico">
     <meta name="theme-color" content="#712cf9">
-
-
     <style>
         .bd-placeholder-img {
           font-size: 1.125rem;
@@ -236,10 +234,11 @@
                         GIT홈페이지로 이동
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
+
                 </div>
                 <div class="col-auto d-none d-lg-block">
                     <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                        <image href="welfare.jpeg" width="400" height="250"></image>
+                        <image href="images/welfare.jpeg" width="400" height="250"></image>
 
                         <text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
                 </div>
@@ -259,7 +258,7 @@
                 </div>
                 <div class="col-auto d-none d-lg-block">
                     <svg class="bd-placeholder-img" width="230" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                        <image href="yellow_bellon.jpeg" width="300" height="250"></image>
+                        <image href="images/yellow_bellon.jpeg" width="300" height="250"></image>
 
                         <text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
                 </div>
@@ -283,7 +282,7 @@
                 </div>
                 <div class="col-auto d-none d-lg-block">
                     <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                        <image href="recipe.jpeg" width="200" height="250"></image>
+                        <image href="images/recipe.jpeg" width="200" height="250"></image>
 
                         <text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
                 </div>
@@ -307,7 +306,7 @@
                 </div>
                 <div class="col-auto d-none d-lg-block">
                     <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                        <image href="fund.jpeg" width="200" height="250"></image>
+                        <image href="images/fund.jpeg" width="200" height="250"></image>
 
                         <text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
                 </div>
@@ -382,9 +381,9 @@
                 <div class="p-4">
                     <h4 class="fst-italic">자격증</h4>
                     <ol class="list-unstyled">
-                        <li><a href="#">정보처리기사</a></li>
-                        <li><a href="#">SQLD</a></li>
-                        <li><a href="#">운전면허1종보통</a></li>
+                        <li>정보처리기사</li>
+                        <li>SQL개발자(SQLD)</li>
+                        <li>운전면허뭐시기</li>
                     </ol>
                 </div>
                 </div>
