--- a/index.html
+++ b/index.html
@@ -230,11 +230,17 @@
                     <h3 class="mb-0">복지관 관련프로젝트</h3>
                     <div class="mb-1 text-body-secondary">Web사이트</div>
                     <p class="card-text mb-auto">복지관 소개 사이트 입니다.</p>
-                    <a href="https://github.com/superdongte/welfare" class="icon-link gap-1 icon-link-hover stretched-link" target="_blank">
+                    <a href="https://github.com/superdongte/welfare" class="icon-link gap-1 icon-link-hover" target="_blank">
                         GIT홈페이지로 이동
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
 
+                    <!-- 복지사이트.pdf 다운로드 링크 -->
+                    <a href="https://raw.githubusercontent.com/superdongte/superdongte.github.io/main/files/복지사이트.pdf"
+                       download
+                       class="icon-link gap-1 icon-link-hover"
+                       style="display: block; margin-top: 10px;">복지사이트.pdf 다운로드
+                    </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
                     <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
@@ -243,6 +249,7 @@
                         <text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
                 </div>
             </div>
+
         </div>
         <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
@@ -251,9 +258,15 @@
                     <h3 class="mb-0">여행 관련 프로젝트</h3>
                     <div class="mb-1 text-body-secondary">Web사이트</div>
                     <p class="mb-auto">여행지와 관련된 프로젝트입니다.</p>
-                    <a href="https://github.com/lemonjiyeon/teamproject" class="icon-link gap-1 icon-link-hover stretched-link" target="_blank">
+                    <a href="https://github.com/lemonjiyeon/teamproject" class="icon-link gap-1 icon-link-hover" target="_blank">
                         GIT 홈페이지로 이동
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
+                    </a>
+                    <!-- 여행사이트.pdf 다운로드 링크 -->
+                    <a href="https://raw.githubusercontent.com/superdongte/superdongte.github.io/main/files/여행웹페이지.pdf"
+                       download
+                       class="icon-link gap-1 icon-link-hover"
+                       style="display: block; margin-top: 10px;">여행사이트.pdf 다운로드
                     </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
@@ -271,11 +284,16 @@
                     <h3 class="mb-0">요리 레시피 프로젝트</h3>
                     <div class="mb-1 text-body-secondary">App</div>
                     <p class="mb-auto">요리 레시피 등록이 가능한 블로그형 앱입니다.</p>
-                    <a href="https://github.com/superdongte/CookProject" class="icon-link gap-1 icon-link-hover stretched-link" target="_blank">
+                    <a href="https://raw.githubusercontent.com/superdongte/superdongte.github.io/main/files/요리레시피 앱.pdf"
+                       download
+                       class="icon-link gap-1 icon-link-hover"
+                       style="display: block; margin-top: 10px;">요리레시피앱.pdf 다운로드
+                    </a>
+                    <a href="https://github.com/superdongte/CookProject" class="icon-link gap-1 icon-link-hover" target="_blank">
                         GIT 홈페이지로 이동(앱)
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
-                    <a href="https://github.com/superdongte/RecipeProject" class="icon-link gap-1 icon-link-hover stretched-link" target="_blank">
+                    <a href="https://github.com/superdongte/RecipeProject" class="icon-link gap-1 icon-link-hover" target="_blank">
                         GIT 홈페이지로 이동(서버)
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
@@ -294,12 +312,18 @@
                     <strong class="d-inline-block mb-2 text-success-emphasis">포트폴리오</strong>
                     <h3 class="mb-0">금융 관련 프로젝트</h3>
                     <div class="mb-1 text-body-secondary">App</div>
-                    <p class="mb-auto">금융에 관련된 데이터를 분석하고 추천해주는 앱 입니다.</p>
-                    <a href="https://github.com/superdongte/TeamBank" class="icon-link gap-1 icon-link-hover stretched-link" target="_blank">
+                    <p class="mb-auto" style="font-size:15px;">금융에 관련된 데이터를 분석하고 추천해주는 앱 입니다.</p>
+                    <a href="https://raw.githubusercontent.com/superdongte/superdongte.github.io/main/files/적금앱프로그램.pdf"
+                       download
+                       class="icon-link gap-1 icon-link-hover"
+                       style="display: block; margin-top: 10px;">적금앱프로그램 다운로드
+                    </a>
+
+                    <a href="https://github.com/superdongte/TeamBank" class="icon-link gap-1 icon-link-hover" target="_blank">
                         GIT 홈페이지로 이동(앱)
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
-                    <a href="https://github.com/superdongte/Bank" class="icon-link gap-1 icon-link-hover stretched-link" target="_blank">
+                    <a href="https://github.com/superdongte/Bank" class="icon-link gap-1 icon-link-hover" target="_blank">
                         GIT 홈페이지로 이동(서버)
                         <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                     </a>
