--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <a href="https://raw.githubusercontent.com/superdongte/superdongte.github.io/main/files/복지사이트.pdf"
                        download
                        class="icon-link gap-1 icon-link-hover"
-                       style="display: block; margin-top: 10px;">복지사이트.pdf 다운로드
+                       style="display: block; margin-top: 10px;">복지사이트 다운로드
                     </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
@@ -266,7 +266,7 @@
                     <a href="https://raw.githubusercontent.com/superdongte/superdongte.github.io/main/files/여행웹페이지.pdf"
                        download
                        class="icon-link gap-1 icon-link-hover"
-                       style="display: block; margin-top: 10px;">여행사이트.pdf 다운로드
+                       style="display: block; margin-top: 10px;">여행사이트 다운로드
                     </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
@@ -287,7 +287,7 @@
                     <a href="https://raw.githubusercontent.com/superdongte/superdongte.github.io/main/files/요리레시피 앱.pdf"
                        download
                        class="icon-link gap-1 icon-link-hover"
-                       style="display: block; margin-top: 10px;">요리레시피앱.pdf 다운로드
+                       style="display: block; margin-top: 10px;">요리레시피앱 다운로드
                     </a>
                     <a href="https://github.com/superdongte/CookProject" class="icon-link gap-1 icon-link-hover" target="_blank">
                         GIT 홈페이지로 이동(앱)
