--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                     <ol class="list-unstyled">
                         <li>정보처리기사</li>
                         <li>SQL개발자(SQLD)</li>
-                        <li>운전면허뭐시기</li>
+                        <li>운전면허1종보통</li>
                     </ol>
                 </div>
                 </div>
