--- a/index.html
+++ b/index.html
@@ -336,6 +336,32 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-6">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <strong class="d-inline-block mb-2 text-primary-emphasis">포트폴리오</strong>
+                    <h3 class="mb-0">야구 관련 프로젝트</h3>
+                    <div class="mb-1 text-body-secondary">Web사이트</div>
+                    <p class="mb-auto">야구와 관련된 프로젝트입니다.</p>
+                    <a href="https://github.com/lemonjiyeon/teamproject" class="icon-link gap-1 icon-link-hover" target="_blank">
+                        GIT 홈페이지로 이동
+                        <svg class="bi"><use xlink:href="#chevron-right"/></svg>
+                    </a>
+                    <!-- 여행사이트.pdf 다운로드 링크 -->
+                    <a href="https://raw.githubusercontent.com/superdongte/superdongte.github.io/main/files/여행웹페이지.pdf"
+                       download
+                       class="icon-link gap-1 icon-link-hover"
+                       style="display: block; margin-top: 10px;">여행사이트 다운로드
+                    </a>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                    <svg class="bd-placeholder-img" width="230" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+                        <image href="images/yellow_bellon.jpeg" width="300" height="250"></image>
+
+                        <text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="introduce">
     <div class="row g-5">
